tests/parser/tests/cases/should_fail/incomplete_tuple_type/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:11
1 |   k : (str: , bar: u8) -> u32 = ("str", 1); // Error here, should expect a type
  |             ^ here
  = note: Expected a type annotation, however received a `,`.
